this is crazy guys I fixed the letter spacing issue and now it looks way better

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ main {
     font-size: 17px;
     line-height: 1.3;
     color: #e7e7d8;
+    letter-spacing: -0.5px;
 }
 .ascii-art pre {
     white-space: pre-wrap;
@@ -42,20 +43,20 @@ main {
 #f {
     position: relative;
     left: 36px;
-    color: red;    
+    color: #fd1813;    
 }
 #a {
-    color: green;    
+    color: #0fa14c;    
 }
 #t {
     position: relative;
     left: -26px;
-    color: blue;
+    color: #1f70c1;
 }
 
 #solutions {
     position: relative;
-    top: -20px;
+    top: -30px;
     float: right;
     padding: 0;
     margin: 0;
